解放ディシジョンの修正

--- a/localisation/english/map/geacps_countries_cosmetic_l_english.yml
+++ b/localisation/english/map/geacps_countries_cosmetic_l_english.yml
@@ -580,6 +580,10 @@
  PRU-BOL_confederation_DEF:0 "ペルー＝ボリビア連合"
  PRU-BOL_confederation_ADJ:0 "ペルー＝ボリビア"
  
+ TRIandTBG_republic:0 "トリニダード及びトバゴ共和国"
+ TRIandTBG_republic_DEF:0 "トリニダード及びトバゴ共和国"
+ TRIandTBG_republic_ADJ:0 "トリニダード・トバゴ"
+ 
 #大洋州
  AOTEAROA_united_tribes:0 "アオテアロア部族連合"
  AOTEAROA_united_tribes_DEF:0 "アオテアロア部族連合"
