--- a/localisation/english/map/geacps_countries_l_english.yml
+++ b/localisation/english/map/geacps_countries_l_english.yml
@@ -896,9 +896,9 @@
  SUR_DEF:0 "スリナム"
  SUR_ADJ:0 "スリナム"
  
- TRI:0 "トリニダード・トバゴ"
- TRI_DEF:0 "トリニダード・トバゴ"
- TRI_ADJ:0 "トリニダード・トバゴ"
+ TRI:0 "トリニダード"
+ TRI_DEF:0 "トリニダード"
+ TRI_ADJ:0 "トリニダード"
  
  URG:0 "ウルグアイ"
  URG_DEF:0 "ウルグアイ"
@@ -1223,13 +1223,13 @@
  SAB_DEF:0 "サバ"
  SAB_ADJ:0 "サバ"
  
+ SCC:0 "南コーカサス"
+ SCC_DEF:0 "南コーカサス"
+ SCC_ADJ:0 "南コーカサス"
+ 
  SCH:0 "四川"
  SCH_DEF:0 "四川"
  SCH_ADJ:0 "四川"
- 
- SCS:0 "南コーカサス"
- SCS_DEF:0 "南コーカサス"
- SCS_ADJ:0 "南コーカサス"
  
  SGH:0 "上海"
  SGH_DEF:0 "上海"
