--- a/localisation/english/map/geacps_countries_long_l_english.yml
+++ b/localisation/english/map/geacps_countries_long_l_english.yml
@@ -801,15 +801,13 @@
  SLO_republic_DEF:0 "スロバキア共和国"
  SLO_socialist_republic:0 "スロバキア社会主義共和国"
  SLO_socialist_republic_DEF:0 "スロバキア社会主義共和国"
- SLO_socialist_republic:0 "スロベニア社会主義共和国"
- SLO_socialist_republic_DEF:0 "スロベニア社会主義共和国"
  
  SLV_peoples_republic:0 "スロベニア人民共和国"
  SLV_peoples_republic_DEF:0 "スロベニア人民共和国"
  SLV_republic:0 "スロベニア共和国"
  SLV_republic_DEF:0 "スロベニア共和国"
- SLV_republic:0 "スロベニア共和国"
- SLV_republic_DEF:0 "スロベニア共和国"
+ SLV_socialist_republic:0 "スロベニア社会主義共和国"
+ SLV_socialist_republic_DEF:0 "スロベニア社会主義共和国"
  
  SOV_republics_union:0 "ソビエト共和国連邦"
  SOV_republics_union_DEF:0 "ソビエト共和国連邦"
@@ -984,10 +982,10 @@
  LBA_arab_state_DEF:0 "リビア・アラブ国"
  LBA_kingdom:0 "リビア王国"
  LBA_kingdom_DEF:0 "リビア王国"
- LBA_socialist_peoples_arab_state:0 "社会主義人民リビア・アラブ国"
- LBA_socialist_peoples_arab_state_DEF:0 "社会主義人民リビア・アラブ国"
  LBA_republic:0 "リビア共和国"
  LBA_republic_DEF:0 "リビア共和国"
+ LBA_socialist_peoples_arab_state:0 "社会主義人民リビア・アラブ国"
+ LBA_socialist_peoples_arab_state_DEF:0 "社会主義人民リビア・アラブ国"
  LBA_state:0 "リビア国"
  LBA_state_DEF:0 "リビア国"
  LBA_united_kingdom:0 "リビア連合王国"
@@ -1219,8 +1217,8 @@
  SUR_republic:0 "スリナム共和国"
  SUR_republic_DEF:0 "スリナム共和国"
  
- TRI_republic:0 "トリニダード・トバゴ共和国"
- TRI_republic_DEF:0 "トリニダード・トバゴ共和国"
+ TRI_republic:0 "トリニダード共和国"
+ TRI_republic_DEF:0 "トリニダード共和国"
  
  URG_oriental_republic:0 "ウルグアイ東方共和国"
  URG_oriental_republic_DEF:0 "ウルグアイ東方共和国"
@@ -2004,6 +2002,9 @@
  SCA_united_kingdom:0 "スカンディナヴィア連合王国"
  SCA_united_kingdom_DEF:0 "スカンディナヴィア連合王国"
  
+ SCC_republic:0 "南コーカサス共和国"
+ SCC_republic_DEF:0 "南コーカサス共和国"
+ 
  SEM_union:0 "サーミランド連合"
  SEM_union_DEF:0 "サーミランド連合"
  
@@ -2167,8 +2168,8 @@
  TGE_international_zone:0 "タンジェ国際地域"
  TGE_international_zone_DEF:0 "タンジェ国際地域"
  
- TRP_kigndom:0 "トリポリタニア王国"
- TRP_kigndom_DEF:0 "トリポリタニア王国"
+ TRP_kingdom:0 "トリポリタニア王国"
+ TRP_kingdom_DEF:0 "トリポリタニア王国"
  TRP_republic:0 "トリポリタニア共和国"
  TRP_republic_DEF:0 "トリポリタニア共和国"
  
@@ -2251,9 +2252,6 @@
  
  SBL_republic:0 "サン・バルテルミー共和国"
  SBL_republic_DEF:0 "サン・バルテルミー共和国"
- 
- SHN_republic:0 "セントヘレナ共和国"
- SHN_republic_DEF:0 "セントヘレナ共和国"
  
  SKN_federation:0 "セントクリストファー・ネイビス連邦"
  SKN_federation_DEF:0 "セントクリストファー・ネイビス連邦"
