--- a/localisation/english/map/geacps_countries_colony_l_english.yml
+++ b/localisation/english/map/geacps_countries_colony_l_english.yml
@@ -27,20 +27,20 @@
  AFG_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  AFG_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  AFG_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- AFG_soviet_member_republic:0 "$NONIDEOLOGY$・$OVERLORDADJ$共和国"
- AFG_soviet_member_republic_DEF:0 "$NONIDEOLOGY$・$OVERLORDADJ$共和国"
- AFG_total_socialism_soviet_member_republic:0 "$NONIDEOLOGY$・$OVERLORDADJ$社会主義共和国"
- AFG_total_socialism_soviet_member_republic_DEF:0 "$NONIDEOLOGY$・$OVERLORDADJ$社会主義共和国"
- AFG_radical_socialism_soviet_member_republic:0 "$NONIDEOLOGY$・$OVERLORDADJ$社会主義共和国"
- AFG_radical_socialism_soviet_member_republic_DEF:0 "$NONIDEOLOGY$・$OVERLORDADJ$社会主義共和国"
- AFG_soviet_member_republic_ADJ:0 "$NONIDEOLOGYADJ$・$OVERLORDADJ$"
- AFG_soviet_soviet_autonomous_republic:0 "$NONIDEOLOGY$自治$OVERLORDADJ$共和国"
- AFG_soviet_soviet_autonomous_republic_DEF:0 "$NONIDEOLOGY$自治$OVERLORDADJ$共和国"
- AFG_total_socialism_soviet_soviet_autonomous_republic:0 "$NONIDEOLOGY$自治$OVERLORDADJ$社会主義共和国"
- AFG_total_socialism_soviet_soviet_autonomous_republic_DEF:0 "$NONIDEOLOGY$自治$OVERLORDADJ$社会主義共和国"
- AFG_radical_socialism_soviet_soviet_autonomous_republic:0 "$NONIDEOLOGY$自治$OVERLORDADJ$社会主義共和国"
- AFG_radical_socialism_soviet_soviet_autonomous_republic_DEF:0 "$NONIDEOLOGY$自治$OVERLORDADJ$社会主義共和国"
- AFG_soviet_soviet_autonomous_republic_ADJ:0 "$NONIDEOLOGYADJ$・$OVERLORDADJ$"
+ AFG_soviet_member_republic:0 "アフガン・$OVERLORDADJ$共和国"
+ AFG_soviet_member_republic_DEF:0 "アフガン・$OVERLORDADJ$共和国"
+ AFG_total_socialism_soviet_member_republic:0 "アフガン・$OVERLORDADJ$社会主義共和国"
+ AFG_total_socialism_soviet_member_republic_DEF:0 "アフガン・$OVERLORDADJ$社会主義共和国"
+ AFG_radical_socialism_soviet_member_republic:0 "アフガン・$OVERLORDADJ$社会主義共和国"
+ AFG_radical_socialism_soviet_member_republic_DEF:0 "アフガン・$OVERLORDADJ$社会主義共和国"
+ AFG_soviet_member_republic_ADJ:0 "アフガン・$OVERLORDADJ$"
+ AFG_soviet_soviet_autonomous_republic:0 "アフガン自治$OVERLORDADJ$共和国"
+ AFG_soviet_soviet_autonomous_republic_DEF:0 "アフガン自治$OVERLORDADJ$共和国"
+ AFG_total_socialism_soviet_soviet_autonomous_republic:0 "アフガン自治$OVERLORDADJ$社会主義共和国"
+ AFG_total_socialism_soviet_soviet_autonomous_republic_DEF:0 "アフガン自治$OVERLORDADJ$社会主義共和国"
+ AFG_radical_socialism_soviet_soviet_autonomous_republic:0 "アフガン自治$OVERLORDADJ$社会主義共和国"
+ AFG_radical_socialism_soviet_soviet_autonomous_republic_DEF:0 "アフガン自治$OVERLORDADJ$社会主義共和国"
+ AFG_soviet_soviet_autonomous_republic_ADJ:0 "アフガン・$OVERLORDADJ$"
  
  ARM_soviet_member_republic:0 "$NONIDEOLOGY$・$OVERLORDADJ$共和国"
  ARM_soviet_member_republic_DEF:0 "$NONIDEOLOGY$・$OVERLORDADJ$共和国"
