--- a/localisation/english/countries_europe/geacps_SAR_l_english.yml
+++ b/localisation/english/countries_europe/geacps_SAR_l_english.yml
@@ -15,12 +15,12 @@
  SAR.0.0:0 "フランスによる新体制"
  SAR.0.1:0 "「かつての故郷への復帰」"
  
- news.6.t:0 "1955年ザール独立住民投票"
- news.6.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
- news.6.0:0 "フランスの影響力はどの位だ...？"
- news.7.t:0 "ザールはフランスの庇護下に留まる"
- news.7.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
- news.7.0:0 "「かつての故郷への復帰」"
- news.8.t:0 "1955年ザール独立"
- news.8.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
- news.8.0:0 "「かつての故郷への復帰」"
+ SAR_news.0.t:0 "1955年ザール独立住民投票"
+ SAR_news.0.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
+ SAR_news.0.0:0 "フランスの影響力はどの位だ...？"
+ SAR_news.1.t:0 "ザールはフランスの庇護下に留まる"
+ SAR_news.1.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
+ SAR_news.1.0:0 "「かつての故郷への復帰」"
+ SAR_news.2.t:0 "1955年ザール独立"
+ SAR_news.2.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
+ SAR_news.2.0:0 "「かつての故郷への復帰」"
