--- a/localisation/english/replace/geacps_loading_tips_l_english.yml
+++ b/localisation/english/replace/geacps_loading_tips_l_english.yml
@@ -1,12 +1,12 @@
 ﻿l_english:
- LOADING_TIP_0:0 "貴方達がこれを破壊することが無ければ、全世界にわたる恒久的平和の招来は決して遠くは無いだろう。\n- 市丸 利之助"
+ LOADING_TIP_0:0 "「大東亜が日本の生存圏」\n- 松岡　洋右"
  LOADING_TIP_1:0 "東亜民族もまた他の民族と同様の権利をもつべきであって、その有色人種たることをむしろ誇りとすべきである。\n- 東條 英機"
  LOADING_TIP_2:0 "やってみせ　言って聞かせて　させてみて　ほめてやらねば　人は動かじ\n- 山本 五十六"
- LOADING_TIP_3:0 "予ハ常ニ諸子ノ先頭ニ在リ\n- 栗林 忠道"
- LOADING_TIP_4:0 "我死して太平洋の防波堤とならん。\n- 南雲 忠一"
+ LOADING_TIP_3:0 "栗林忠道中将は、アメリカ人が戦争で直面した最も手ごわい敵の一人であった。\n- ジョセフ・H・アレクサンダー"
+ LOADING_TIP_4:0 "然しながら、2年3年となれば全く確信は持てぬ。\n- 山本 五十六"
  LOADING_TIP_5:0 "私は海軍に入っていなかったら、今ごろきっとお琴の師匠で身を立てていただろうと思います。\n- 井上 成美"
- LOADING_TIP_6:0 "特攻は統帥の外道である。\n- 大西 瀧治郎"
- LOADING_TIP_7:0 "イエスかノーか？\n- 山下　奉文"
+ LOADING_TIP_6:0 "この救出に勝利が含まれている。\n- ウィンストン・チャーチル"
+ LOADING_TIP_7:0 "アメリカ人は他のすべてのあらゆる可能性を試した後に、常に正しいことをすると期待できる。\n- ウィンストン・チャーチル"
  LOADING_TIP_8:0 "海軍は贅沢ですね。\n- 辻 政信"
  LOADING_TIP_9:0 "陸軍の教育者として、戸山学校、予科士官学校、士官学校の3つの校長をつとめたのは、わたしくらいのものでしょう。まことにしあわせ者でした。\n- 牛島 満"
  LOADING_TIP_10: "なんですって？おしまいですって？では世界は？植民地は？\n- シャルル・ド・ゴール"
@@ -15,7 +15,7 @@
  LOADING_TIP_13: "作戦は90パーセント成功した。\n- バーナード・モントゴメリー"
  LOADING_TIP_14: "いいえ、マーシャル将軍とお呼び下さい閣下。\n- ジョージ・マーシャル"
  LOADING_TIP_15: "物腰は優雅に、行動は力強く。\n- ドワイト・D・アイゼンハワー"
- LOADING_TIP_16: "私たちはパールハーバーを忘れはしない。\n- ヘンリー・アーノルド"
+ LOADING_TIP_16: "真珠湾を忘れるな！\n- 『讀賣報知』"
  LOADING_TIP_17: "大胆不敵であれ！\n- ジョージ・S・パットン"
  LOADING_TIP_18: "必ずや私は戻るだろう。\n- ダグラス・マッカーサー"
  LOADING_TIP_19: "諸君、私は諸君の1人ひとりについて、いささかの不安の念も持っていないということを、先ずはっきりさせておきたい。\n- レイモンド・スプルーアンス"
@@ -48,7 +48,7 @@
  LOADING_TIP_46: "怪しいところには、弾丸をぶち込め。\n- エルヴィン・ロンメル"
  LOADING_TIP_47: "落ち着け、そしてよく狙え。お前はこれから一人の男を殺すのだ。\n- エルネスト・ゲバラ"
  LOADING_TIP_48: "大東亜の各国家及各民族をして、各々其の処を得しめ、帝国を核心とする道義に基く共存共栄の秩序を確立せんとするに在る。\n- 東條 英機"
- LOADING_TIP_49: "「マライ」、「スマトラ」、「ジャワ」、「ボルネオ」、「セレベス」ハ帝国領土ト決定シ重要資源ノ供給源トシテ極力之ガ開発竝ニ民心ノ把握ニ努ム\n- 大東亜政略指導大綱"
+ LOADING_TIP_49: "「スマトラ」、「ジャワ」、「ボルネオ」、「セレベス」、「ニューギニヤ」ハ帝国領土ト決定シ重要資源ノ供給源トシテ極力之ガ開発竝ニ民心ノ把握ニ努ム\n- 大東亜政略指導大綱"
  LOADING_TIP_50: "大東亞共榮圏の建設は私の二十年来の持論であり又理想である。抑も之を實現せしむべく熱心に説いた者は日本人を母に持つ墺洪國貴族クーデンホーフカレルギー伯であつた。\n- 鹿島 守之助"
  LOADING_TIP_51: "これは、まさに歴史的な偉業であった。…日本は白人のアジア侵略を止めるどころか、帝国主義、植民地主義、人類差別に終止符を打つことをなしとげた。\n- アーノルド・J・トインビー"
  LOADING_TIP_52: "敗北を認めたときにのみ、戦争は敗北する。\n- エーリッヒ・フォン・マンシュタイン"
@@ -61,11 +61,11 @@
  LOADING_TIP_59: "一歩も下がるな!\n- ソ連国防人民委員令第227号"
  LOADING_TIP_60: "皇国ノ興廃此ノ一戦ニ在リ、各員一層奮励努力セヨ\n- 東郷 平八郎"
  LOADING_TIP_61: "英国は各員がその義務を尽くすことを期待する。\n- ホレーショ・ネルソン"
- LOADING_TIP_62: "欲しがりません勝つまでは\n- 戦時標語"
+ LOADING_TIP_62: "未来は我々のものだ、くよくよするな。\n- ミハイル・トゥハチェフスキー"
  LOADING_TIP_63: "ぜいたくは敵だ！\n- 戦時標語"
  LOADING_TIP_64: "世の中に寛容の形態は3種類存在する。1つは誠実な寛容、1つは不誠実な寛容、そして混沌だ。\n- ベルリン攻防戦中にソ連軍兵士が発見したドイツ兵の手記より"
  LOADING_TIP_65: "アメリカが何故負けたか？自身を過信していたからさ。\n- ダグラス・マッカーサー"
- LOADING_TIP_66: "もし今日のイギリスに悔やむべきことがあるとするならば、シンガポールの失陥ほどそれに値する出来事は存在しないだろう。\n- シャルル・ド・ゴール"
+ LOADING_TIP_66: "もし今日のソビエトに悔やむべきことがあるとするならば、シベリアの失陥ほどそれに値する出来事は存在しないだろう。\n- シャルル・ド・ゴール"
  LOADING_TIP_67: "大衆の考える最も身近な恐怖は変化することである。\n- ウィンストン・チャーチル"
  LOADING_TIP_68: "不誠実な人間が真実を言ったところで返ってくるのは失笑だけだ。\n- ウェンデル・L・ウィルキー"
  LOADING_TIP_69: "大統領。私の母は、スペインなのです。\n- ホセ・アントニオ・プリモ・デ・リベラ"
@@ -78,7 +78,7 @@
  LOADING_TIP_76: "全ての人間の全ての人間に対するかのような闘争\n- 『リヴァイアサン』"
  LOADING_TIP_77: "我々もまたあなた方アメリカ国民の覇権主義に対し今まで以上に強く戦います。\n- 鈴木　貫太郎"
  LOADING_TIP_78: "英米本位の平和主義を排す。\n- 近衛　文麿"
- LOADING_TIP_79: "日本はこんなに勝っているのか。\n- 小磯　國昭"
+ LOADING_TIP_79: "目の前の小さな現象に目を奪われて、遠い目標を見失ってはならない。\n- 東久邇 宮稔彦王"
  LOADING_TIP_80: "たぶん、歴代の朝鮮総督のうち、ご覧のとおり私が一番の醜男だ。\n- 小磯 國昭"
  LOADING_TIP_81: "ベルギーは道ではない。国だ!\n- 軍人の王"
  LOADING_TIP_82: "明石元二郎一人で、満州の日本軍20万人に匹敵する戦果を上げている。\n- ヴィルヘルム2世"
