--- a/localisation/english/map/geacps_state_names_native_l_english.yml
+++ b/localisation/english/map/geacps_state_names_native_l_english.yml
@@ -6,7 +6,7 @@
  STATE_3_it:0 "ベルナ"
  STATE_4_de_nazi:0 "ニーダードナウ"
  STATE_4_de:0 "ニーダーエスターライヒ"
- STATE_4_en:0 "ロウアー・オーストリア"
+ STATE_4_en:0 "ロウワー・オーストリア"
  STATE_5_de:0 "エルムラント＝マズーレン"
  STATE_5_ru:0 "ヴァルミニスコ＝マズ―ルスキー"
  STATE_6_de:0 "フランダーン"
@@ -32,7 +32,7 @@
  STATE_13_ru:0 "エーゼリ島"
  STATE_14_br:0 "ブレーズ"
  STATE_14_en:0 "ブリタニー"
- STATE_15_en:0 "ロウアー＝ノルマンディー"
+ STATE_15_en:0 "ロウワー＝ノルマンディー"
  STATE_15_fr:0 "バス＝ノルマンディー"
  STATE_17_de:0 "フライ・グラーフシャフト"
  STATE_19_en:0 "アクイテイン"
@@ -61,19 +61,23 @@
  STATE_48_tr:0 "ソフヤ"
  STATE_51_en:0 "ハンバーグ"
  STATE_51_fr:0 "アンブール"
- STATE_52_en:0 "アッパー・バヴェアリア"
- STATE_52_fr:0 "オート・バヴィエール"
- STATE_52_it:0 "アルト・バヴィエーラ"
- STATE_53_en:0 "ロウアー・バヴェアリア"
- STATE_53_fr:0 "バス・バヴィエール"
- STATE_53_it:0 "バス・バヴィエーラ"
- STATE_54_en:0 "ミドル・フランコニア"
- STATE_54_fr:0 "モィエン・フランコニー"
+ STATE_52_de:0 "オーバーバイエルン"
+ STATE_52_en:0 "アッパーバヴェアリア"
+ STATE_52_fr:0 "オートバヴィエール"
+ STATE_52_it:0 "アルトバヴィエーラ"
+ STATE_53_de:0 "ニーダーバイエルン"
+ STATE_53_en:0 "ロウワーバヴェアリア"
+ STATE_53_fr:0 "バスバヴィエール"
+ STATE_53_it:0 "バスバヴィエーラ"
+ STATE_54_de:0 "ミッテルフランケン"
+ STATE_54_en:0 "ミドルフランコニア"
+ STATE_54_fr:0 "モィエンフランコニー"
  STATE_55_en:0 "ヘッセ"
  STATE_55_fr:0 "ヘス"
  STATE_57_en:0 "ウェストファリア"
  STATE_57_fr:0 "ウェストファリー"
  STATE_58_da:0 "ホルステン"
+ STATE_59_de:0 "オスト・ハノーファー"
  STATE_59_en:0 "イースト・ハノーヴァー"
  STATE_59_fr:0 "エスト・ハノーヴル"
  STATE_60_en:0 "チューリンギア"
@@ -90,7 +94,7 @@
  STATE_65_fr:0 "サクス"
  STATE_66_cs:0 "ドルニ―・スレスコ"
  STATE_66_de:0 "ニーダーシュレージェン"
- STATE_66_en:0 "ロウアー・シリージア"
+ STATE_66_en:0 "ロウワー・シリージア"
  STATE_66_fr:0 "バス・シレシー"
  STATE_66_hu:0 "アルソー・シレージア"
  STATE_66_pl:0 "ドルヌィ・シロンスク"
@@ -402,6 +406,12 @@
  STATE_971_ch:0 "迪慶"
  STATE_989_ja:0 "華府"
  STATE_990_de:0 "モスカウ市"
+ STATE_1000_de:0 "オーバーフランケン"
+ STATE_1000_en:0 "アッパーフランコニア"
+ STATE_1000_fr:0 "オートフランコニー"
+ STATE_1001_de:0 "ウンターフランケン"
+ STATE_1001_en:0 "ロウワーフランコニア"
+ STATE_1001_fr:0 "バスフランコニー"
  STATE_1039_de:0 "プレミッセル"
  STATE_1048_de:0 "ヴォルゴグラート"
  STATE_1048_de_nazi:0 "ヒンデンブルク"
@@ -447,3 +457,7 @@
  STATE_1360_fr:0 "トレンティン"
  STATE_1379_en:0 "プリンス・エドワード・アイランド"
  STATE_1379_fr:0 "イル・サン＝ジャン"
+ STATE_1407_hu:0 "ムラメンテ"
+ STATE_1408_de:0 "ニーダー・シュタイアーマルク"
+ STATE_1409_de:0 "オーバー・クライン"
+ STATE_1409_it:0 "アルト・カルニオラ"
