--- a/localisation/english/generic/geacps_parties_l_english.yml
+++ b/localisation/english/generic/geacps_parties_l_english.yml
@@ -122,6 +122,22 @@
  PARTY_great_britain_communist_party:0 "共産党"
  PARTY_great_britain_communist_party_long:0 "グレートブリテン共産党"
  
+#GER
+ PARTY_christian_democratic_union_of_germany:0 "CDU"
+ PARTY_christian_democratic_union_of_germany_long:0 "ドイツ・キリスト教民主同盟"
+ PARTY_democratic_unity_party_of_germany:0 "DED"
+ PARTY_democratic_unity_party_of_germany_long:0 "ドイツ社会主義統一党"
+ PARTY_free_democratic_party:0 "FDP"
+ PARTY_free_democratic_party_long:0 "自由民主党"
+ PARTY_communist_party_of_german:0 "KPD"
+ PARTY_communist_party_of_german_long:0 "ドイツ共産党"
+ PARTY_german_party:0 "DP"
+ PARTY_german_party_long:0 "ドイツ党"
+ PARTY_social_democratic_party_of_germany:0 "SPD"
+ PARTY_social_democratic_party_of_germany_long:0 "ドイツ社会民主党"
+ PARTY_socialist_unity_party_of_germany:0 "SED"
+ PARTY_socialist_unity_party_of_germany_long:0 "ドイツ社会主義統一党"
+ 
 ##アフリカ
 #EGY-エジプト
  PARTY_liberal_constitutional_party:0 "自由立憲党"
