--- a/localisation/english/replace/geacps_core_l_english.yml
+++ b/localisation/english/replace/geacps_core_l_english.yml
@@ -66,7 +66,9 @@
  debug_special_event_add:0 "SE変数の減少"
  
 #戦争名
- WAR_NAME_JAP_CHI:0 "支那事変"
+ WAR_NAME_JAP_CHI:0 "[JAP-CHI_2nd_war]"
+ JAP-CHI_2nd_war_a:0 "抗日戦争"
+ JAP-CHI_2nd_war_b:0 "日華事変"
  
 #他
  POLITICS_LEADER:0 ""
