--- a/localisation/english/map/geacps_state_names_l_english.yml
+++ b/localisation/english/map/geacps_state_names_l_english.yml
@@ -1408,3 +1408,5 @@
  STATE_1407:0 "プレクムリェ"
  STATE_1408:0 "シュタイエルスカ"
  STATE_1409:0 "高地カルニオラ"
+ STATE_1410:0 "トリスタンダクーニャ諸島"
+ STATE_1411:0 "ガンビエ諸島"
