--- a/localisation/english/temporary/geacps_JAP_l_english.yml
+++ b/localisation/english/temporary/geacps_JAP_l_english.yml
@@ -40,7 +40,7 @@
  JAP_relationship_with_fallen_Red_star:0 "堕ちた赤い星との関係"
  JAP_eliminating_threat_of_Siberia:0 "シベリアの脅威を排除"
  JAP_support_for_cossacks_in_far_east:0 "極東のコサックを支援"
- JAP_Baikal–Amur_Mainline:0 "バイカル・アムール鉄道"
+ JAP_Baikal-Amur_Mainline:0 "バイカル・アムール鉄道"
  JAP_Hokushin-ron:0 "北進論"
  JAP_reject_the_Anglo-American_and_Russian_centered_p:0 "英米ソ本位の平和主義を排す"
  
@@ -144,7 +144,7 @@
  JAP_The_relationship_with_the_missing_red_star:0 "欠けた赤い星との関係"
  JAP_Eliminating_the_threat_of_Siberia:0 "シベリアの脅威を排除"
  JAP_Supporting_Cossacks_in_the_Far_East:0 "極東のコサックを支援"
- JAP_Baikal–Amur_Mainline:0 "バム鉄道"
+ JAP_Baikal-Amur_Mainline:0 "バム鉄道"
  JAP_The_North_Advancement_Theory:0 "北進論"
  JAP_No_more_Anglo-American_and_Soviet-oriented_imperialism:0 "英米ソ本位の帝國主義を排す"
  JAP_Appointment_of_innovative_bureaucrats:0 "革新官僚の任命"
