自治度システム関連の変更

--- a/localisation/english/map/geacps_autonomy_system_l_english.yml
+++ b/localisation/english/map/geacps_autonomy_system_l_english.yml
@@ -11,18 +11,24 @@
  colony:0 "植民地"
  dominion:0 "自治領"
  colony_and_protectorate:0 "植民地及び保護領"
- federation_of_colonies:0 "植民地連邦"
+ colonies_federation:0 "植民地連邦"
  protected_territory:0 "保護領"
  protected_state:0 "保護国"
  
-#その他
- condominium:0 "共同統治領"
- junior_partner_colony:0 "植民地"
- junior_partner_state:0 "同君連合下位国"
- leased_territory:0 "租借地"
+#委任統治領
  mandated_territory_A:0 "A式委任統治領"
  mandated_territory_B:0 "B式委任統治領"
  mandated_territory_C:0 "C式委任統治領"
+ 
+#同君連合
+ crown_land:0 "王冠領"
+ junior_partner_protected_territory:0 "同君連合保護領"
+ junior_partner_colony:0 "同君連合植民地"
+ junior_partner_state:0 "同君連合下位国"
+ 
+#その他
+ condominium:0 "共同統治領"
+ leased_territory:0 "租借地"
  occupied_territory:0 "占領地"
  princely_state:0 "藩王国"
  trust_territories:0 "信託統治領"
