--- a/localisation/english/map/geacps_countries_colony_l_english.yml
+++ b/localisation/english/map/geacps_countries_colony_l_english.yml
@@ -1803,9 +1803,9 @@
  EIN_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
  EIN_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
  EIN_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$諸島"
- EIN_federation_of_colonies:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
- EIN_federation_of_colonies_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
- EIN_federation_of_colonies_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
+ EIN_colonies_federation:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
+ EIN_colonies_federation_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
+ EIN_colonies_federation_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
  EIN_imperial_member:0 "$OVERLORDADJ$領東印度諸島連邦"
  EIN_imperial_member_DEF:0 "$OVERLORDADJ$領東印度諸島連邦"
  EIN_imperial_member_ADJ:0 "$OVERLORDADJ$領東印度諸島"
@@ -1875,9 +1875,9 @@
  INC_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  INC_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  INC_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
- INC_federation_of_colonies:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
- INC_federation_of_colonies_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
- INC_federation_of_colonies_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ INC_colonies_federation:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
+ INC_colonies_federation_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
+ INC_colonies_federation_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  JOR_dominion:0 "$NONIDEOLOGY$自治領"
  JOR_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -2192,9 +2192,9 @@
  EQA_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  EQA_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  EQA_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
- EQA_federation_of_colonies:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
- EQA_federation_of_colonies_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
- EQA_federation_of_colonies_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ EQA_colonies_federation:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
+ EQA_colonies_federation_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
+ EQA_colonies_federation_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  IFN_dominion:0 "$NONIDEOLOGY$自治領"
  IFN_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -2367,9 +2367,9 @@
  WAF_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  WAF_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  WAF_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
- WAF_federation_of_colonies:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
- WAF_federation_of_colonies_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
- WAF_federation_of_colonies_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ WAF_colonies_federation:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
+ WAF_colonies_federation_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
+ WAF_colonies_federation_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  WTG_dominion:0 "トーゴランド自治領"
  WTG_dominion_DEF:0 "トーゴランド自治領"
@@ -2568,9 +2568,9 @@
  LEW_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
  LEW_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
  LEW_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$諸島"
- LEW_federation_of_colonies:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
- LEW_federation_of_colonies_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
- LEW_federation_of_colonies_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
+ LEW_colonies_federation:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
+ LEW_colonies_federation_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
+ LEW_colonies_federation_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
  
  MSR_dominion:0 "$NONIDEOLOGY$自治領"
  MSR_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -2737,9 +2737,9 @@
  WIN_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
  WIN_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
  WIN_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$諸島"
- WIN_federation_of_colonies:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
- WIN_federation_of_colonies_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
- WIN_federation_of_colonies_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
+ WIN_colonies_federation:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
+ WIN_colonies_federation_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
+ WIN_colonies_federation_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
  
  WIW_dominion:0 "$NONIDEOLOGY$諸島自治領"
  WIW_dominion_DEF:0 "$NONIDEOLOGY$諸島自治領"
@@ -2749,9 +2749,9 @@
  WIW_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
  WIW_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
  WIW_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$諸島"
- WIW_federation_of_colonies:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
- WIW_federation_of_colonies_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
- WIW_federation_of_colonies_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
+ WIW_colonies_federation:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
+ WIW_colonies_federation_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
+ WIW_colonies_federation_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
  
 #大洋州
  COK_dominion:0 "$NONIDEOLOGY$諸島自治領"
