南アゼルバイジャン

--- a/localisation/english/map/geacps_countries_l_english.yml
+++ b/localisation/english/map/geacps_countries_l_english.yml
@@ -1223,6 +1223,10 @@
  SAB_DEF:0 "サバ"
  SAB_ADJ:0 "サバ"
  
+ SAZ:0 "南アゼルバイジャン"
+ SAZ_DEF:0 "南アゼルバイジャン"
+ SAZ_ADJ:0 "南アゼルバイジャン"
+ 
  SCC:0 "南コーカサス"
  SCC_DEF:0 "南コーカサス"
  SCC_ADJ:0 "南コーカサス"
