--- a/localisation/english/map/geacps_countries_long_l_english.yml
+++ b/localisation/english/map/geacps_countries_long_l_english.yml
@@ -1641,6 +1641,9 @@
  SAB_republic:0 "サバ共和国"
  SAB_republic_DEF:0 "サバ共和国"
  
+ SAZ_republic:0 "南アゼルバイジャン共和国"
+ SAZ_republic_DEF:0 "南アゼルバイジャン共和国"
+ 
  SCH_minguo:0 "四川民国"
  SCH_minguo_DEF:0 "四川民国"
  SCH_republic:0 "四川共和国"
@@ -1976,10 +1979,10 @@
  
  RME_city_state:0 "ローマ市国"
  RME_city_state_DEF:0 "ローマ市国"
- RME_free_city:0 "自由都市ローマ"
- RME_free_city_DEF:0 "自由都市ローマ"
  RME_empire:0 "ローマ帝国"
  RME_empire_DEF:0 "ローマ帝国"
+ RME_free_city:0 "自由都市ローマ"
+ RME_free_city_DEF:0 "自由都市ローマ"
  RME_republic:0 "ローマ共和国"
  RME_republic_DEF:0 "ローマ共和国"
  
