エラー除去

--- a/localisation/english/generic/geacps_characters_l_english.yml
+++ b/localisation/english/generic/geacps_characters_l_english.yml
@@ -207,7 +207,11 @@
 #VIN-ベトナム
  CHARACTER_bao_dai_emperor:0 "保大帝"
  CHARACTER_nguyen_phuc_vinh_thuy:0 "阮福永瑞"
- CHARACTER_nguyen_phuc_thien_desc:0 "ベトナム帝国皇帝"
+ CHARACTER_nguyen_phuc_vinh_thuy_desc:0 "ベトナム帝国皇帝"
+ 
+#YEM-イエメン
+ CHARACTER_yahya_muhammad_hamid_ed-din:0 "ヤヒヤー・ムハンマド・ハミードゥッディーン"
+ CHARACTER_yahya_muhammad_hamid_ed-din_desc:0 "イエメン国王"
  
 ##ヨーロッパ
 #ADR-アンドラ
@@ -260,6 +264,8 @@
  CHARACTER_christian_x:0 "クリスチャン10世"
  CHARACTER_christian_carl_frederik_albert_alexander_vilhelm:0 "クリスチャン・カール・フレゼリク・アルバート・アレクサンダー・ヴィルヘルム"
  CHARACTER_christian_carl_frederik_albert_alexander_vilhelm_desc:0 "デンマーク王"
+ CHARACTER_carl_frederik_bistrup_simony:0 "カール・フレデリック・ビストラップ・シモニー"
+ CHARACTER_carl_frederik_bistrup_simony_desc:0 "北グリーンランド総督及び南グリーンランド総督"
  
 #EST-エストニア
  CHARACTER_johannes_vares_barbarus:0 "ヨハネス・バレス・バルバルス"
@@ -277,7 +283,7 @@
  CHARACTER_georges_hubert_parisot:0 "ジョージズ・ユベール・パリソ"
  CHARACTER_georges_hubert_parisot_desc:0 "マルティニーク総督"
  CHARACTER_henri_pierre_nicolas:0 "アンリ・ピエール・ニコラス"
- CHARACTER_henri_pierre_nicolas:0 "カメルーン総督"
+ CHARACTER_henri_pierre_nicolas_desc:0 "カメルーン総督"
  CHARACTER_jean_noutary:0 "ジャン・ノータリー"
  CHARACTER_jean_noutary_desc:0 "トーゴ弁務官"
  CHARACTER_jean_pezet:0 "ジャン・ペゼット"
@@ -296,7 +302,7 @@
  CHARACTER_charles_andre_joseph_marie_de_gaulle:0 "シャルル・アンドレ・ジョゼフ・マリー・ド・ゴール"
  CHARACTER_charles_andre_joseph_marie_de_gaulle_desc:0 "1940年6月には同年3月のエドゥアール・ダラディエの辞任により新たに首相に就任したポール・レノー率いる新内閣の国防次官兼陸軍次官に任命され、フランス軍史上最年少の49歳で少将となった。ドイツ軍によるフランス侵攻に対するイギリス軍の協力を得るためロンドンに飛び、ウィンストン・チャーチル戦時内閣と交渉を開始する。その中で、合法的に英仏連合軍の指揮権の統合と亡命的性格の政策、英仏連合に奔走した。イギリス側の閣議決定後にフランス政府の避難先ボルドーに向かったが、レノー内閣は英仏連合の案件と休戦派の圧力で総辞職し、次官職を解かれた。\n6月15日に首都のパリが陥落した。やむなくド・ゴールはイギリスへ召還された連合軍顧問のイギリス陸軍将校のスピアーズ将軍に同伴して亡命することを決断した。そしてロンドンに亡命政府の「自由フランス」を結成し、BBCラジオを通じて、対ドイツ抗戦の継続とヴィシー政権への抵抗をフランス国民に呼びかけた。こうした情報戦をアンドレ・ドゥヴァヴランがさらに展開した。彼は、ロスチャイルド家と古くから姻戚のヴォルム銀行を代理する立場にあった。ヴィシー政権の主要な閣僚は同行から出ていた。翌1941年10月25日にド・ゴールはジャン・ムーランと会見し、1つの大きな組織である「レジスタンス国民会議」を作る為にムーランを極秘でフランス本土に派遣する。同年、エルヴェ・アルファンがド・ゴールの経済顧問となり、ヴォルムとロスチャイルドの共同出資によりSNPAが設立された。パッシ大佐はSNPAの監査役となった。\nド・ゴールは自ら自由フランス軍を指揮してアルジェリア、チュニジアなどのフランスの植民地を中心とした北アフリカ戦線で戦い、対独抗戦を指導した。しかしフランス領インドシナ・マダガスカルを初めとする植民地・フランス本国のフランス軍の多くは中立を維持するかヴィシー政権に帰属した。その後自由フランス軍は連合国と共同でフランス植民地のガボン・マダガスカルを攻略した。1942年にはアルジェリアのフランソワ・ダルラン大将が連合国側につき、北アフリカのフランス主席となったが暗殺された。この暗殺の背後にはド・ゴールの関与があったという説もある。アンリ・ジロー大将がダルランの後継となり、ド・ゴールとフランスを代表した。\n1943年1月にフランスの指導者を決める為のカサブランカ会談が開かれたが決着しなかった。5月にフランス国内のレジスタンス組織全国抵抗評議会はド・ゴールをレジスタンスの指導者と決定したが、6月にアルジェリアで結成されたフランス国民解放委員会はド・ゴールとジローを共同代表とした。この二頭体制は11月にジローが辞職するまで続いた。委員会は翌1944年にフランス共和国臨時政府に改組され、ド・ゴールが代表となった。\n1944年6月に連合軍によるヨーロッパ大陸への再上陸作戦・ノルマンディー上陸作戦が成功。ドゴールは祖国に戻って自由フランス軍を率い連合軍と共に戦い、同年8月25日にパリを解放した。翌26日にエトワール凱旋門からノートルダム大聖堂まで凱旋パレードを行い、シャンゼリゼ通りを埋め尽くしたパリ市民から熱烈な喝采を浴びた。\nフランス解放後に臨時政府がフランスの統治を行うこととなり、制憲議会は満場一致でド・ゴールを臨時政府の主席に選出した。ド・ゴールは自由フランス時代から第三共和政の議会制度には欠陥があると主張していたためフランス人民連合を設立したが、他の指導者・政党の意見を無視することが多くなり、とりわけ社会党・共産党から批判を受けた。ド・ゴールは経済政策としてエメ・ルペルク蔵相を用いた。エメは1923年からシュナイダー家でキャリアを積み東ヨーロッパに確固たる地盤を築いていた。そしてド・ゴールは1945年10月、ミシェル・ドブレのデクレでフランス国立行政学院を設けて格差国家を運命づけた。"#こちらの文章は、当MODの通史との整合性が取れなくなる可能性が存在している為、今後修正される可能性が高いです。"
  CHARACTER_marie_emile_antoine_bethouart:0 "マリー・エミール・アントワーヌ・ベトゥーアート"
- CHARACTER_marie_emile_antoine_bethouart:0 "オーストリア高等弁務官"
+ CHARACTER_marie_emile_antoine_bethouart_desc:0 "オーストリア高等弁務官"
  CHARACTER_pierre_charles_cournarie:0 "ピエール・チャールズ・クルナリー"
  CHARACTER_pierre_charles_cournarie_desc:0 "西アフリカ総督"
  CHARACTER_pierre_florimond:0 "ピエール・フロリモンド"
@@ -408,6 +414,8 @@
 #HUN-ハンガリー
  CHARACTER_zoltan_tildy:0 "ティルディ・ゾルターン"
  CHARACTER_zoltan_tildy_desc:0 "ハンガリー大統領"
+ CHARACTER_arpad_szakasits:0 "サカシチ・アールパード"
+ CHARACTER_arpad_szakasits_desc:0 ""
  
 #ICE-アイスランド
  CHARACTER_sveinn_bjornsson:0 "スヴェイン・ビョルンソン"
@@ -422,7 +430,7 @@
  CHARACTER_alcide_amedeo_francesco_de_gasperi_desc:0 "イタリア大統領"
  CHARACTER_pius_xii:0 "ピウス12世"
  CHARACTER_eugenio_maria_giuseppe_giovanni_pacelli:0 "エウジェニオ・マリア・ジュゼッペ・ジョヴァンニ・パチェッリ"
- CHARACTER_eugenio_maria_giuseppe_giovanni_pacelli:0 "第260代ローマ教皇"
+ CHARACTER_eugenio_maria_giuseppe_giovanni_pacelli_desc:0 "第260代ローマ教皇"
  
 #LAT-ラトビア
  CHARACTER_augusts_kirhensteins:0 "アウグスツ・キルヘンシュタインス"
@@ -482,8 +490,11 @@
  
 #PRE-プロイセン
  CHARACTER_wilhelm_iii:0 "ヴィルヘルム3世"
- CHARACTER_friedrich_wilhelm_victor_august_ernst:0 "フリードリヒ・ヴィルヘルム・ヴィクトル・アウグスト・エルンスト"
- CHARACTER_friedrich_wilhelm_victor_august_ernst_desc:0 "ドイツ皇帝\nプロイセン王"
+ CHARACTER_friedrich_wilhelm_victor_august_ernst_von_preusen:0 "フリードリヒ・ヴィルヘルム・ヴィクトル・アウグスト・エルンスト・フォン・プロイセン"
+ CHARACTER_friedrich_wilhelm_victor_august_ernst_von_preusen_desc:0 "ドイツ皇帝\nプロイセン王"
+ CHARACTER_louis_ferdinand_i:0 "ルイ・フェルディナント1世"
+ CHARACTER_louis_ferdinand_victor_eduard_adalbert_michael_hubertus_von_preusen:0 "ルイ・フェルディナント・ヴィクトル・エドゥアルト・アーダルベルト・ミヒャエル・フーベルトゥス・フォン・プロイセン"
+ CHARACTER_louis_ferdinand_victor_eduard_adalbert_michael_hubertus_von_preusen_desc:0 ""
  
 #ROM-ルーマニア
  CHARACTER_mihai_i:0 "ミハイ1世"
@@ -495,7 +506,7 @@
 #SER-セルビア
  CHARACTER_petar_ii:0 "ペータル2世"
  CHARACTER_petar_ii_karadordevic:0 "ペータル2世・カラジョルジェヴィッチ"
- CHARACTER_petar_ii_karadordevic:0 "南スラブ王"
+ CHARACTER_petar_ii_karadordevic_desc:0 "南スラブ王"
  
 #SIC-シチリア
  CHARACTER_ferdinando_iii:0 "フェルディナンド3世"
