--- a/localisation/english/map/geacps_countries_cosmetic_l_english.yml
+++ b/localisation/english/map/geacps_countries_cosmetic_l_english.yml
@@ -464,7 +464,7 @@
  
  LIEandALS_united_principality:0 "リヒテンシュタイン及びアラスカ連合侯国"
  LIEandALS_united_principality_DEF:0 "リヒテンシュタイン及びアラスカ連合侯国"
- LIEandALS_united_principality_ADJ:0 "リヒテンシュタイン及びアラスカ"
+ LIEandALS_united_principality_ADJ:0 "リヒテンシュタイン・アラスカ"
  
  MEK-SCHWERIN_grand_duchy:0 "メクレンブルク＝シュヴェリーン大公国"
  MEK-SCHWERIN_grand_duchy_DEF:0 "メクレンブルク＝シュヴェリーン大公国"
