--- a/localisation/english/map/geacps_countries_long_l_english.yml
+++ b/localisation/english/map/geacps_countries_long_l_english.yml
@@ -1517,10 +1517,10 @@
  KAC_republic:0 "カチン共和国"
  KAC_republic_DEF:0 "カチン共和国"
  
- KAS_kingdom:0 "カシュミール王国"
- KAS_kingdom_DEF:0 "カシュミール王国"
- KAS_republic:0 "カシュミール共和国"
- KAS_republic_DEF:0 "カシュミール共和国"
+ KAS_kingdom:0 "カシミール王国"
+ KAS_kingdom_DEF:0 "カシミール王国"
+ KAS_republic:0 "カシミール共和国"
+ KAS_republic_DEF:0 "カシミール共和国"
  
  KAY_republic:0 "カヤー共和国"
  KAY_republic_DEF:0 "カヤー共和国"
