サブイデオロギーの追加

--- a/localisation/english/generic/geacps_ideologies_l_english.yml
+++ b/localisation/english/generic/geacps_ideologies_l_english.yml
@@ -13,6 +13,8 @@
  trotskyism_ideology_desc:0 ""
  bukharinism_ideology:0 "ブハーリン主義"
  bukharinism_ideology_desc:0 ""
+ maoism_ideology:0 "毛沢東主義"
+ maoism_ideology_desc:0 ""
 
 #Radical Socialism
  radical_socialism:0 "急進社会主義"
@@ -49,6 +51,8 @@
  conservative_democracy_acceptance:0 "保守民主主義者との外交の容認"
  conservative_democracy_ideology:0 "保守民主主義"
  conservative_democracy_ideology_desc:0 ""
+ christian_democracy_ideology:0 "キリスト教民主主義"
+ christian_democracy_ideology_desc:0 ""
  
 #Authoritative Democracy
  authoritative_democracy:0 "権威民主主義"
