--- a/localisation/english/generic/geacps_characters_l_english.yml
+++ b/localisation/english/generic/geacps_characters_l_english.yml
@@ -543,6 +543,11 @@
 #RUS-ロシア
  CHARACTER_grigory_mikhaylovich_semyonov:0 "グリゴリー・ミハイロヴィチ・セミョーノフ"
  CHARACTER_grigory_mikhaylovich_semyonov_desc:0 ""
+ CHARACTER_lev_trotsky:0 "レフ・トロツキー"
+ CHARACTER_lev_davidovich_bronstein:0 "レフ・ダヴィードヴィチ・ブロンシュテイン"
+ CHARACTER_lev_davidovich_bronstein_desc:0 ""
+ CHARACTER_nikolai_ivanovich_bukharin:0 "ニコライ・イヴァノヴィチ・ブハーリン"
+ CHARACTER_nikolai_ivanovich_bukharin_desc:0 ""
  CHARACTER_nikolai_mikhailovich_shvernik:0 "ニコライ・ミハイロヴィチ・シュヴェルニク"
  CHARACTER_nikolai_mikhailovich_shvernik_desc:0 "1888年、サンクトペテルブルクに生まれる。1905年にロシア社会民主労働党に入党。のち同党がボリシェヴィキとメンシェヴィキに分裂すると、ボリシェヴィキ側に付いた。ロシア革命後の1924年、ロシア・ソビエト連邦社会主義共和国の人民委員に就任し、翌1925年には党中央委員に選出された。1927年にウラル地方の党書記に降格されるが、ヨシフ・スターリンの五カ年計画に基づく重工業化に対する熱心な唱道者であったため、政治的に復権を果たした。\n1929年にモスクワに戻り、冶金労働者組合議長に就任、共産党組織局員兼書記に選出された。1930年全ソ労組中央評議会第一書記に就任し、1944年までこの地位にいた。1939年にはソ連共産党政治局員候補に選出された。\n第二次世界大戦中、シュヴェルニクはおもにヨーロッパ・ロシアの産業をナチス・ドイツの侵攻からウラル以東に疎開させる役割を担った。戦後の1946年、ミハイル・カリーニンの跡を引継いでソ連の国家元首に相当する最高会議幹部会議長に選出された。"
  CHARACTER_ivan_stepanovich_konev:0 "イワン・ステパノヴィチ・コーネフ"
