--- a/localisation/japanese/map/geacps_countries_colony_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_colony_l_japanese.yml
@@ -1103,6 +1103,8 @@
  MOR_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  MOR_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  MOR_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
+ MOR_SPR_protected_territory:0 "$OVERLORDADJ$保護領モロッコ"
+ MOR_SPR_protected_territory_DEF:0 "$OVERLORDADJ$保護領モロッコ"
  MOR_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  MRT_dominion:0 "$NONIDEOLOGY$自治領"
