--- a/localisation/japanese/map/geacps_countries_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_l_japanese.yml
@@ -615,6 +615,10 @@
  YUG_ADJ:0 "ユーゴスラビア"
  
 #アフリカ
+ AFA:0 "アファール"
+ AFA_DEF:0 "アファール"
+ AFA_ADJ:0 "アファール"
+ 
  ALG:0 "アルジェリア"
  ALG_DEF:0 "アルジェリア"
  ALG_ADJ:0 "アルジェリア"
@@ -1013,7 +1017,8 @@
  TAH_DEF:0 "タヒチ"
  TAH_ADJ:0 "タヒチ"
  
-##GEACPS
+#アメリカ諸州
+##追加国家
 #アジア
  ADN:0 "アデン"
  ADN_DEF:0 "アデン"
@@ -1234,10 +1239,6 @@
  NAN:0 "南京"
  NAN_DEF:0 "南京"
  NAN_ADJ:0 "南京"
- 
- NCS:0 "北コーカサス"
- NCS_DEF:0 "北コーカサス"
- NCS_ADJ:0 "北コーカサス"
  
  NIG:0 "寧夏"
  NIG_DEF:0 "寧夏"
