--- a/localisation/japanese/map/geacps_countries_long_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_long_l_japanese.yml
@@ -162,8 +162,8 @@
  KAZ_republic:0 "カザフスタン共和国"
  KAZ_republic_DEF:0 "カザフスタン共和国"
  
- KHI_khanate:0 "ヒヴァ汗国"
- KHI_khanate_DEF:0 "ヒヴァ汗国"
+ KHI_khanate:0 "ヒヴァ・ハン国"
+ KHI_khanate_DEF:0 "ヒヴァ・ハン国"
  KHI_republic:0 "ヒヴァ共和国"
  KHI_republic_DEF:0 "ヒヴァ共和国"
  
@@ -200,12 +200,12 @@
  LEB_republic:0 "レバノン共和国"
  LEB_republic_DEF:0 "レバノン共和国"
  
- MAL_federated_states:0 "マレー連邦"
- MAL_federated_states_DEF:0 "マレー連邦"
- MAL_federation:0 "マレー連邦"
- MAL_federation_DEF:0 "マレー連邦"
- MAL_union:0 "マレー連合"
- MAL_union_DEF:0 "マレー連合"
+ MAL_federated_states:0 "マラヤ連邦"
+ MAL_federated_states_DEF:0 "マラヤ連邦"
+ MAL_federation:0 "マラヤ連邦"
+ MAL_federation_DEF:0 "マラヤ連邦"
+ MAL_union:0 "マラヤ連邦"
+ MAL_union_DEF:0 "マラヤ連邦"
  
  MAN_empire:0 "満州帝国"
  MAN_empire_DEF:0 "満州帝国"
@@ -213,8 +213,8 @@
  MAN_soviet_government_DEF:0 "満州ソビエト政府"
  MAN_state:0 "満州国"
  MAN_state_DEF:0 "満州国"
- MAN_warlord:0 "満洲軍閥"
- MAN_warlord_DEF:0 "満洲軍閥"
+ MAN_warlord:0 "満州軍閥"
+ MAN_warlord_DEF:0 "満州軍閥"
  
  MEN_autonomous_federation:0 "蒙古自治邦"
  MEN_autonomous_federation_DEF:0 "蒙古自治邦"
@@ -327,6 +327,9 @@
  TMS_republic:0 "トルクメニスタン共和国"
  TMS_republic_DEF:0 "トルクメニスタン共和国"
  
+ TRC_sheikhdoms:0 "トルーシャル・オマーン首長国"
+ TRC_sheikhdoms_DEF:0 "トルーシャル・オマーン首長国"
+ 
  TUR_republic:0 "トルコ共和国"
  TUR_republic_DEF:0 "トルコ共和国"
  
@@ -408,8 +411,8 @@
  BAY_duchy_DEF:0 "バイエルン公国"
  BAY_kingdom:0 "バイエルン王国"
  BAY_kingdom_DEF:0 "バイエルン王国"
- BAY_replublic:0 "バイエルン共和国"
- BAY_replublic_DEF:0 "バイエルン共和国"
+ BAY_republic:0 "バイエルン共和国"
+ BAY_republic_DEF:0 "バイエルン共和国"
  
  BEL_kingdom:0 "ベルギー王国"
  BEL_kingdom_DEF:0 "ベルギー王国"
@@ -623,8 +626,8 @@
  KAR_republic:0 "カレリア共和国"
  KAR_republic_DEF:0 "カレリア共和国"
  
- KBK_republic:0 "カバルダ・バルカル共和国"
- KBK_republic_DEF:0 "カバルダ・バルカル共和国"
+ KBK_republic:0 "カバルダ＝バルカル共和国"
+ KBK_republic_DEF:0 "カバルダ＝バルカル共和国"
  
  KHA_republic:0 "ハカス共和国"
  KHA_republic_DEF:0 "ハカス共和国"
@@ -1134,8 +1137,8 @@
  TUN_republic:0 "チュニジア共和国"
  TUN_republic_DEF:0 "チュニジア共和国"
  
- TZN_united_republic:0 "タンザニア連合共和国 "
- TZN_united_republic_DEF:0 "タンザニア連合共和国 "
+ TZN_united_republic:0 "タンザニア連合共和国"
+ TZN_united_republic_DEF:0 "タンザニア連合共和国"
  
  UGA_republic:0 "ウガンダ共和国"
  UGA_republic_DEF:0 "ウガンダ共和国"
@@ -1216,14 +1219,15 @@
  DOM_republic:0 "ドミニカーナ共和国"
  DOM_republic_DEF:0 "ドミニカーナ共和国"
  
+ 
  ECU_republic:0 "エクアドル共和国"
  ECU_republic_DEF:0 "エクアドル共和国"
  
  ELS_republic:0 "エルサルバドル共和国"
  ELS_republic_DEF:0 "エルサルバドル共和国"
  
- GDL_repbulic:0 "グアドループ共和国"
- GDL_repbulic_DEF:0 "グアドループ共和国"
+ GDL_republic:0 "グアドループ共和国"
+ GDL_republic_DEF:0 "グアドループ共和国"
  
  GUA_republic:0 "グアテマラ共和国"
  GUA_republic_DEF:0 "グアテマラ共和国"
@@ -1281,6 +1285,7 @@
  URG_oriental_republic:0 "ウルグアイ東方共和国"
  URG_oriental_republic_DEF:0 "ウルグアイ東方共和国"
  
+ 
  VEN_bolivarian_republic:0 "ベネズエラ・ボリバル共和国"
  VEN_bolivarian_republic_DEF:0 "ベネズエラ・ボリバル共和国"
  VEN_republic:0 "ベネズエラ共和国"
@@ -1333,7 +1338,8 @@
  TAH_republic:0 "タヒチ共和国"
  TAH_republic_DEF:0 "タヒチ共和国"
  
-##GEACPS
+#アメリカ諸州
+##追加国家
 #アジア
  ADN_republic:0 "アデン共和国"
  ADN_republic_DEF:0 "アデン共和国"
@@ -1449,8 +1455,8 @@
  FUJ_warlord:0 "福建軍閥"
  FUJ_warlord_DEF:0 "福建軍閥"
  
- GAN_ma_warlord:0 "甘粛馬家軍閥"
- GAN_ma_warlord_DEF:0 "甘粛馬家軍閥"
+ GAN_ma_warlord:0 "甘粛馬軍閥"
+ GAN_ma_warlord_DEF:0 "甘粛馬軍閥"
  GAN_minguo:0 "甘粛民国"
  GAN_minguo_DEF:0 "甘粛民国"
  GAN_republic:0 "甘粛共和国"
@@ -1543,8 +1549,8 @@
  HUB_warlord:0 "湖北軍閥"
  HUB_warlord_DEF:0 "湖北軍閥"
  
- HYD_kingdom:0 "ハイダラバード王国"
- HYD_kingdom_DEF:0 "ハイダラバード王国"
+ HYD_kingdom:0 "ハイデラバード王国"
+ HYD_kingdom_DEF:0 "ハイデラバード王国"
  
  INC_union:0 "インドシナ連合"
  INC_union_DEF:0 "インドシナ連合"
@@ -1604,8 +1610,8 @@
  KRE_republic:0 "カレン共和国"
  KRE_republic_DEF:0 "カレン共和国"
  
- KUM_khanate:0 "クムル汗国"
- KUM_khanate_DEF:0 "クムル汗国"
+ KUM_khanate:0 "クムル・ハン国"
+ KUM_khanate_DEF:0 "クムル・ハン国"
  
  MCA_free_city:0 "自由都市澳門"
  MCA_free_city_DEF:0 "自由都市澳門"
@@ -1632,8 +1638,8 @@
  NAN_warlord:0 "南京軍閥"
  NAN_warlord_DEF:0 "南京軍閥"
  
- NIG_ma_warlord:0 "寧夏馬家軍閥"
- NIG_ma_warlord_DEF:0 "寧夏馬家軍閥"
+ NIG_ma_warlord:0 "寧夏馬軍閥"
+ NIG_ma_warlord_DEF:0 "寧夏馬軍閥"
  NIG_minguo:0 "寧夏民国"
  NIG_minguo_DEF:0 "寧夏民国"
  NIG_republic:0 "寧夏共和国"
@@ -1669,8 +1675,8 @@
  QAH_warlord:0 "察哈爾軍閥"
  QAH_warlord_DEF:0 "察哈爾軍閥"
  
- QIG_ma_warlord:0 "青海馬家軍閥"
- QIG_ma_warlord_DEF:0 "青海馬家軍閥"
+ QIG_ma_warlord:0 "青海馬軍閥"
+ QIG_ma_warlord_DEF:0 "青海馬軍閥"
  QIG_minguo:0 "青海民国"
  QIG_minguo_DEF:0 "青海民国"
  QIG_republic:0 "青海共和国"
@@ -1707,6 +1713,9 @@
  SAZ_republic:0 "南アゼルバイジャン共和国"
  SAZ_republic_DEF:0 "南アゼルバイジャン共和国"
  
+ SCC_republic:0 "南コーカサス共和国"
+ SCC_republic_DEF:0 "南コーカサス共和国"
+ 
  SCH_minguo:0 "四川民国"
  SCH_minguo_DEF:0 "四川民国"
  SCH_republic:0 "四川共和国"
@@ -1718,8 +1727,8 @@
  
  SGH_free_city:0 "自由都市上海"
  SGH_free_city_DEF:0 "自由都市上海"
- SGH_great_way_municipal_government:0 "上海市大道政府"
- SGH_great_way_municipal_government_DEF:0 "上海市大道政府"
+ SGH_great_way_municipal_government:0 "上海大道政府"
+ SGH_great_way_municipal_government_DEF:0 "上海大道政府"
  SGH_international_settlement:0 "上海共同租界"
  SGH_international_settlement_DEF:0 "上海共同租界"
  SGH_soviet_government:0 "上海ソビエト政府"
@@ -1795,11 +1804,8 @@
  TNG_republic:0 "タンガニスタン共和国"
  TNG_republic_DEF:0 "タンガニスタン共和国"
  
- TOK_repulic:0 "トンキン共和国"
- TOK_repulic_DEF:0 "トンキン共和国"
- 
- TRC_sheikhdoms:0 "トルーシャル・オマーン首長国"
- TRC_sheikhdoms_DEF:0 "トルーシャル・オマーン首長国"
+ TOK_republic:0 "トンキン共和国"
+ TOK_republic_DEF:0 "トンキン共和国"
  
  TRV_kingdom:0 "トラヴァンコール王国"
  TRV_kingdom_DEF:0 "トラヴァンコール王国"
@@ -1957,6 +1963,7 @@
  GAL_kingdom:0 "ガリツィア王国"
  GAL_kingdom_DEF:0 "ガリツィア王国"
  
+ 
  GIB_free_city:0 "自由都市ジブラルタル"
  GIB_free_city_DEF:0 "自由都市ジブラルタル"
  
@@ -2071,12 +2078,6 @@
  SCA_united_kingdom:0 "スカンディナヴィア連合王国"
  SCA_united_kingdom_DEF:0 "スカンディナヴィア連合王国"
  
- SCC_republic:0 "南コーカサス共和国"
- SCC_republic_DEF:0 "南コーカサス共和国"
- 
- SEM_union:0 "サーミランド連合"
- SEM_union_DEF:0 "サーミランド連合"
- 
  SGR_confederation:0 "南ドイツ連邦"
  SGR_confederation_DEF:0 "南ドイツ連邦"
  SGR_united_republic:0 "南ドイツ連合共和国"
@@ -2094,6 +2095,7 @@
  
  SLA_kingdom:0 "スラボニア王国"
  SLA_kingdom_DEF:0 "スラボニア王国"
+ 
  
  SMR_most_serene_republic:0 "晴朗極まる共和国サンマリノ"
  SMR_most_serene_republic_DEF:0 "晴朗極まる共和国サンマリノ"
@@ -2203,6 +2205,7 @@
  
  RHO_republic:0 "ローデシア共和国"
  RHO_republic_DEF:0 "ローデシア共和国"
+ 
  
  SML_republic:0 "ソマリランド共和国"
  SML_republic_DEF:0 "ソマリランド共和国"
@@ -2320,6 +2323,7 @@
  NFL_republic:0 "ニューファンドランド共和国"
  NFL_republic_DEF:0 "ニューファンドランド共和国"
  
+ 
  QEB_republic:0 "ケベック共和国"
  QEB_republic_DEF:0 "ケベック共和国"
  
@@ -2365,6 +2369,7 @@
 #大洋州
  CHR_republic:0 "クリスマス共和国"
  CHR_republic_DEF:0 "クリスマス共和国"
+ 
  
  COK_republic:0 "クック共和国"
  COK_republic_DEF:0 "クック共和国"
@@ -2438,8 +2443,8 @@
  CLD_republic:0 "コロラド共和国"
  CLD_republic_DEF:0 "コロラド共和国"
  
- CLU_free_city:0 "コロンビア自由都市"
- CLU_free_city_DEF:0 "コロンビア自由都市"
+ CLU_free_city:0 "自由都市コロンビア"
+ CLU_free_city_DEF:0 "自由都市コロンビア"
  
  CNT_republic:0 "コネチカット共和国"
  CNT_republic_DEF:0 "コネチカット共和国"
@@ -2575,3 +2580,4 @@
  
  WYO_republic:0 "ワイオミング共和国"
  WYO_republic_DEF:0 "ワイオミング共和国"
+ 
