ドイツの初期設定

--- a/localisation/japanese/generic/geacps_characters_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_characters_l_japanese.yml
@@ -392,10 +392,13 @@
  CHARACTER_geoffrey_rhodes_bromet_desc:0 "マン島副総督"
  
 #GER-ドイツ
+ CHARACTER_curt_ernst_carl_schumacher:0 "クルト・エルンスト・カール・シューマッハー"
+ CHARACTER_curt_ernst_carl_schumacher_desc:0 "ドイツ連邦共和国大統領"
  CHARACTER_friedrich_wilhelm_reinhold_pieck:0 "フリードリヒ・ヴィルヘルム・ラインホルト・ピーク"
  CHARACTER_friedrich_wilhelm_reinhold_pieck_desc:0 "ドイツ民主共和国大統領"
  CHARACTER_karl_borromaus_arnold:0 "カール・ボロメオ・アルノルト"
- CHARACTER_karl_borromaus_arnold_desc:0 "ドイツ連邦共和国大統領"
+ CHARACTER_karl_borromaus_arnold_desc:0 ""
+ CHARACTER_theodor_heuss:0 "テオドール・ホイス"
  
 #GRE-ギリシャ
  CHARACTER_georgios_ii:0 "ゲオルギオス2世"
