--- a/localisation/japanese/generic/geacps_ideologies_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_ideologies_l_japanese.yml
@@ -7,6 +7,8 @@
  total_socialism_acceptance:0 "全体社会主義者との外交の容認"
  total_socialism_ideology:0 "全体社会主義"
  total_socialism_ideology_desc:0 ""
+ marxism-leninism_ideology:0 "マルクス＝レーニン主義"
+ marxism-leninism_ideology_desc:0 ""
  stalinism_ideology:0 "スターリン主義"
  stalinism_ideology_desc:0 "スターリン主義とは個人崇拝、暴力的対外政策、恐怖政治や大規模な粛清を特徴とし、スターリン自身はマルクス・レーニン主義と呼んだ全体主義である。"
  trotskyism_ideology:0 "トロツキー主義"
