--- a/localisation/japanese/map/geacps_state_names_l_japanese.yml
+++ b/localisation/japanese/map/geacps_state_names_l_japanese.yml
@@ -952,7 +952,7 @@
  STATE_951:0 "ケダ"
  STATE_952:0 "プルリス"
  STATE_953:0 "サバ"
- STATE_954:0 "烏蘭烏拉"
+ STATE_954:0 "唐古拉山鎮"
  STATE_955:0 "スルハンダリヤ"
  STATE_956:0 "モン"
  STATE_957:0 "カレン"
@@ -1437,7 +1437,7 @@
  STATE_1436:0 "カシュカダリヤ"
  STATE_1437:0 "ベイエリア"
  STATE_1438:0 "チェリャビンスク"
- STATE_1439:0 "アバ"
+ STATE_1439:0 "阿壩"
  STATE_1440:0 "ボホール島"
  STATE_1441:0 "中央マケドニア"
  STATE_1442:0 "佐渡島"
