--- a/localisation/japanese/technology/geacps_naval_l_japanese.yml
+++ b/localisation/japanese/technology/geacps_naval_l_japanese.yml
@@ -1,4 +1,61 @@
 ﻿l_japanese:
+
+#module_category
+ ship_fire_extinguishing_system:0 "消化設備"
+ EQ_MOD_CAT_ship_fire_extinguishing_system_TITLE:0 "消化設備"
+ EQ_MOD_CAT_CIWS_TITLE:0 "CIWS"
+
+#module slot
+ EQ_MOD_SLOT_front_3_custom_slot_TITLE:0 "前部 3 カスタム"
+ EQ_MOD_SLOT_front_4_custom_slot_TITLE:0 "前部 4 カスタム"
+ EQ_MOD_SLOT_front_5_custom_slot_TITLE:0 "前部 5 カスタム"
+ EQ_MOD_SLOT_front_6_custom_slot_TITLE:0 "前部 6 カスタム"
+ EQ_MOD_SLOT_mid_4_custom_slot_TITLE:0 "中部 4 カスタム"
+ EQ_MOD_SLOT_mid_5_custom_slot_TITLE:0 "中部 5 カスタム"
+ EQ_MOD_SLOT_mid_6_custom_slot_TITLE:0 "中部 6 カスタム"
+ EQ_MOD_SLOT_mid_7_custom_slot_TITLE:0 "中部 7 カスタム"
+ EQ_MOD_SLOT_mid_8_custom_slot_TITLE:0 "中部 8 カスタム"
+ EQ_MOD_SLOT_mid_9_custom_slot_TITLE:0 "中部 9 カスタム"
+ EQ_MOD_SLOT_rear_3_custom_slot_TITLE:0 "後部 3 カスタム"
+ EQ_MOD_SLOT_rear_4_custom_slot_TITLE:0 "後部 4 カスタム"
+ EQ_MOD_SLOT_rear_5_custom_slot_TITLE:0 "後部 5 カスタム"
+ EQ_MOD_SLOT_rear_6_custom_slot_TITLE:0 "後部 6 カスタム"
+
+ fixed_ship_sonar_2_slot:0 "ソナー"
+ fixed_ship_sonar_3_slot:0 "ソナー"
+ fixed_ship_engine_2_slot:0 "第2エンジン"
+ fixed_ship_engine_2_slot:0 "第3エンジン"
+ fixed_ship_fuel_storage_slot:0 "追加増槽"
+ fixed_ship_fire_extinguishing_system_slot:0 "消化設備"
+#module
+ ship_fire_extinguishing_system_1:0 "消化設備I型"
+ ship_fire_extinguishing_system_1_desc:0 "消化設備I型"
+ ship_fire_extinguishing_system_2:0 "消化設備II型"
+ ship_fire_extinguishing_system_2_desc:0 "消化設備II型"
+
+ ship_fuel_storage_1:0 "追加増槽II型"
+ ship_fuel_storage_1_desc:0 "追加増槽II型"
+ ship_fuel_storage_2:0 "追加増槽III型"
+ ship_fuel_storage_2_desc:0 "追加増槽III型"
+
+ ship_CIWS_1:0 "CIWS I型"
+ ship_CIWS_1_desc:0 "CIWS I型"
+ ship_CIWS_2:0 "CIWS II型"
+ ship_CIWS_2_desc:0 "CIWS II型"
+ ship_CIWS_3:0 "CIWS III型"
+ ship_CIWS_3_desc:0 "CIWS III型"
+#equipments category
+ ship_hull_nuke_carrier:0 "原子力航空母艦"
+
+
+#equipments
+ ship_hull_nuke_carrier_1:0 "原子力航空母艦 I"
+ ship_hull_nuke_carrier_2:0 "原子力航空母艦 II"
+#modifier
+ modifier_experience_gain_nuke_carrier_training_factor:0 "原子力航空母艦の訓練経験値獲得率"
+ modifier_experience_gain_nuke_carrier_combat_factor:0 "原子力航空母艦の戦闘経験値獲得率"
+
+##AT
 #モジュール
  EQ_MOD_CAT_ship_anti_air_cannon_TITLE:0 "高角砲"
  EQ_MOD_CAT_ship_dp_battery_TITLE:0 "両用砲"
