--- a/localisation/japanese/generic/geacps_parties_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_parties_l_japanese.yml
@@ -3,28 +3,30 @@
  PARTY_illegal_party:0 "§R非合法政党§!"
  PARTY_illegal_party_long:0 "§R非合法政党§!"
  
- PARTY_centre_party:0 "中央党"
  PARTY_centre_party_long:0 "中央党"
- PARTY_communist_party:0 "共産党"
+ PARTY_centre_party:0 "中央党"
  PARTY_communist_party_long:0 "共産党"
- PARTY_conservative_party:0 "保守党"
+ PARTY_communist_party:0 "共産党"
  PARTY_conservative_party_long:0 "保守党"
- PARTY_governor_general:0 "総督"
+ PARTY_conservative_party:0 "保守党"
  PARTY_governor_general_long:0 "総督"
- PARTY_independent_politician:0 "無所属"
+ PARTY_governor_general:0 "総督"
  PARTY_independent_politician_long:0 "無所属"
- PARTY_labour_party:0 "労働党"
+ PARTY_independent_politician:0 "無所属"
  PARTY_labour_party_long:0 "労働党"
- PARTY_liberal_party:0 "自由党"
+ PARTY_labour_party:0 "労働党"
  PARTY_liberal_party_long:0 "自由党"
- PARTY_provisional_government:0 "臨時政府"
- PARTY_provisional_government_long:0 "臨時政府"
- PARTY_social_democratic_party:0 "社会民主党"
- PARTY_social_democratic_party_long:0 "社会民主党"
- PARTY_national_democratic_union:0 "国民民主連合"
+ PARTY_liberal_party:0 "自由党"
  PARTY_national_democratic_union_long:0 "国民民主連合"
- PARTY_republican_party:0 "共和党"
+ PARTY_national_democratic_union:0 "国民民主連合"
+ PARTY_peoples_party:0 "人民党"
+ PARTY_peoples_party_long:0 "人民党"
+ PARTY_provisional_government_long:0 "臨時政府"
+ PARTY_provisional_government:0 "臨時政府"
  PARTY_republican_party_long:0 "共和党"
+ PARTY_republican_party:0 "共和党"
+ PARTY_social_democratic_party_long:0 "社会民主党"
+ PARTY_social_democratic_party:0 "社会民主党"
  
 ##アジア
 #BHR-バーレーン
@@ -126,7 +128,7 @@
  PARTY_christian_democratic_union_of_germany:0 "CDU"
  PARTY_christian_democratic_union_of_germany_long:0 "ドイツ・キリスト教民主同盟"
  PARTY_democratic_unity_party_of_germany:0 "DED"
- PARTY_democratic_unity_party_of_germany_long:0 "ドイツ社会主義統一党"
+ PARTY_democratic_unity_party_of_germany_long:0 "ドイツ民主主義統一党"
  PARTY_free_democratic_party:0 "FDP"
  PARTY_free_democratic_party_long:0 "自由民主党"
  PARTY_communist_party_of_german:0 "KPD"
